// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`State > Initial State 1`] = `
"
<state-app><!-- #shadowroot -->
  <h1>StateApp</h1>
  <p>Initial Value<!--₥0--></p>
  <p>0<!--₥1--></p>
  <p>null<!--₥2--></p>
  <p>undefined<!--₥3--></p>
  <p>Initial Value<!--₥4--></p>
  <ul>
    <li>apple<!--₥0--></li>
    <li>orange<!--₥0--></li>
  </ul>
</state-app>
"
`;

exports[`State > Modify State 1`] = `
"
<state-app><!-- #shadowroot -->
  <h1>StateApp</h1>
  <p>New Value<!--₥0--></p>
  <p>10<!--₥1--></p>
  <p>null<!--₥2--></p>
  <p>undefined<!--₥3--></p>
  <p>New Value<!--₥4--></p>
  <ul>
    <li>apple<!--₥0--></li>
    <li>orange<!--₥0--></li>
    <li>banana<!--₥0--></li>
  </ul>
</state-app>
"
`;
